test: fix of broken tests in domain module